# POD-Order-Management

./: .gitignore  .qoderignore  AGENTS.md  README.md  analyze_extra.py  analyze_remote.py  check_all_vue.py  check_context.py  check_context2.py  fix_encoding.py  fix_final.py  fix_prod_last.py  init_project.py  verify_all.py
backend/: .env.example  pyproject.toml  temp_query.py
backend/scripts/: SignGenerator.java  SignGeneratorV2.java  _check_order_db.py  _check_order_service.py  _check_orders.py  _check_sku.py  _check_sku_fields.py  _check_sku_id_field.py  _fix_color_map.py  _fix_old_order.py  _fix_sku_code.py  _fix_sku_map.py  _fix_sku_map2.py  _gen_preview_html.py  _test_fullflow_verify.py  _test_sku_lookup.py  add_design_link_fields.sql  add_email_sent_field.sql  add_operator_email.sql  add_service_link_fields.sql  analyze_affterent_param.py  analyze_common_param.py  analyze_online_sign.py  check_db_constraints.py  check_db_status.py  check_effect_images.py  check_effect_svg.py  check_order_4002217518.py  check_order_flow.py  check_order_flow_v2.py  check_order_status.py  check_orders_sku.py  check_orders_temp.py  check_product_photos.py  check_sku_sizes.py  check_status_values.py  check_storage.py  check_supabase_resources.py  check_test_order.py  compare_pdf_output.py  (+125 more)
backend/src/: SIGN生成小工具.doc  模版-设计图-校对文档-快递面单V2.ai  直发API对接文档.md
backend/tests/: 01_仪表盘总览.html  02_待确认订单.html  03_生产中订单.html  04_已完成订单.html  05_物流追踪.html  06_邮件模板.html  2026-01-19.md  POD 管理系统_开发时植入Skills 建议.txt  designer_script.js  pixso_sidebar_raw.txt  preview_15C_Production.html  管理员登录.html  (+7 more)
(+147 files in other folders)
